# Time_Table_Project

./: .env.example  .gitignore  .mydb.sql.swp  .~lock.test.xlsx#  File 0.json  File 1.json  File 2.json  File 3.json  File 6.json  File 7.json  Makefile  README.md  check.json  check1.json  errors.py  main.py  playground.py  population.json  population1.json  requirements.txt  setup.cfg  test.json  test.py  test.xlsx  updated_population.json  urls.py
_shared/: __init__.py  authentication.py  constants.py  db_service.py  error_service.py  routing_utils.py  schema_types.py  server.py  typings.py  utilities.py
_shared/middlewares/: __init__.py  _shared.py  error_handler.py  logger.py  schema_validation.py
data/: .~lock.Chromosome_data.xlsx#  .~lock.exam_input_data.xlsx#  .~lock.exam_input_data_test.xlsx#  .~lock.exam_input_data_test_01.xlsx#  .~lock.students.csv#  Chromosome_data.xlsx  First_Year_Updated.xlsx  exam_input_data.xlsx  exam_input_data_test.xlsx  exam_input_data_test_01.xlsx  exams.csv  periods.csv  rooms.csv  students.csv
data/archives/: .~lock.10.xlsx#  .~lock.2.xlsx#  .~lock.30.xlsx#  .~lock.4.xlsx#  .~lock.8.xlsx#  1.xlsx  10.xlsx  11.xlsx  12.xlsx  13.xlsx  14.xlsx  15.xlsx  16.xlsx  17.xlsx  18.xlsx  19.xlsx  2.xlsx  20.xlsx  2020-06-26 19:08:30.489572.xlsx  2020-06-26 19:12:31.807737.xlsx  2020-07-06 19:10:47.137203.xlsx  21.xlsx  22.xlsx  23.xlsx  24.xlsx  25.xlsx  26.xlsx  27.xlsx  (+10 more)
docs/: TimeTablingdB.mwb  TimeTablingdB.mwb.bak  commands.rst  config.rst  folder-structure.rst  models.rst  routes.rst  schema.rst  service.rst
features/: migration.py  miscellaneous_functions.py
(+37 files in other folders)
