[metadata]
name = {name}
version = {version}
author = {author}
author-email = {author-email}
home-page = {name}
description = {description}
long-description = file: README.md, CHANGELOG
license = MIT
license-file = COPYING
platform = any
keywords = {keywords}
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6

[options]
zip_safe = false
include_package_data = true
python_requires = != 3.0.*, != 3.1.*, != 3.2.*
packages = {name}
test_suite = tests
setup_requires =
    setuptools
	# setuptools >=30.3.0     # minimal version for `setup.cfg`
    # setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
install_requires =
	{install_requires}
tests_require =
    {tests_require}

[options.extras_require]

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = zip, gztar

[pycodestyle]
max-line-length = 120

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
max-line-length = 120
ignore = D200, D203, D213, D406, D407   # Google conventions
    
[flake8]
max-line-length = 120
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

